--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Welcome to my blog</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>xin chao</h2>
-    <h3>toi ten Duy</h3>
-    <h4>jhasfh</h4>
-    <h4>íadjoasjd</h4>
-    <h5>xin chao</h5>
+    <h1>EROR 404</h1>
+    <h2>Coming soon....</h2>
+    <p>Loading now, please wait....</p>
+    <img src="50511011681_aa6b5e8f3d_o.png" height="65%" width="65%" alt="Beautiful Girl">
 </body>
 </html>
-
