--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <div class="background"></div>
     <div class="content">
-        <a id="tittle" href="https://www.facebook.com/" title="That' My Angel">
+        <a id="tittle" href="https://duypro3311.github.io/frontend/" title="That' My Angel">
             <img id="logo" src="logo.gif" alt="logo">
         </a>
         <script>
