--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="AZ.png" type="x-image/icon">
 </head>
-<body>
-    
+<body> 
     <div class="background"></div>
     <div class="content">
         <a id="tittle" href="https://duypro3311.github.io/frontend/" title="That' My Angel">
@@ -34,11 +33,10 @@
     <button id="menuButton">Menu</button>
     <div class="sidebar" id="sidebar">
         <div id="video">
-            <iframe width="404" height="215" src="https://www.youtube.com/embed/95ahbau-rJk?si=N1keWNww0L_xP7sY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="404" height="215" src="https://www.youtube.com/embed/videoseries?si=mReGRen9gSj-efxz&amp;list=PLvXVRR2VbscLlDPP7aVU6kbzmFjQrJpeF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <!-- Nội dung thanh bên ở đây... -->
     </div>
-    <script src="script.js"></script>
     <div class="content1">
         <h1>Welcome to That's My Angel</h1>
     </div>
@@ -54,6 +52,7 @@
         <div class="album"><img src="55103120760bf73ef6d7c968f452641b_oe=60ED30B8.jpg" alt="Ảnh 9"></div>
         <div class="album"><img src="71f6ec863a0e63f9e072d4fa8eedd073_oe=60EDCCC9.jpg" alt="Ảnh 10"></div>
     </div>
+    <script src="script.js"></script>
     <ul>
         
     </ul>   
