--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
             setTimeout(function() {
             // Ngừng chạy hình ảnh bằng cách gán thuộc tính src thành một hình ảnh tĩnh
             logo.src = 'AZ.png';
-            }, 1200); // 2000 milliseconds (2 giây)
+            }, 1200); // 1200 milliseconds (1,2 giây)
             });
         </script>
     
     </div>
     <div id="head">
-        <h1>Nơi lưu giữ cái đẹp</h1>
+        <h1>Chia sẻ ảnh đẹp cho bạn</h1>
     </div>
-    <button id="menuButton">Menu</button>
+    <button id="menuButton">🎵</button>
     <div class="sidebar" id="sidebar">
         <div id="video">
-            <iframe width="404" height="215" src="https://www.youtube.com/embed/videoseries?si=mReGRen9gSj-efxz&amp;list=PLvXVRR2VbscLlDPP7aVU6kbzmFjQrJpeF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="404" height="245" src="https://www.youtube.com/embed/videoseries?si=1iuM_ygdNuc83HIK&amp;list=PLvXVRR2VbscLNR3U-GzGs6vmUAzCdqFFt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <!-- Nội dung thanh bên ở đây... -->
     </div>
