--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body> 
     <div class="background"></div>
     <div class="content">
+        <h>huy đẹp zai</h1>
         <a id="tittle" href="https://duypro3311.github.io/frontend/" title="That' My Angel">
             <img id="logo" src="logo.gif" alt="logo">
         </a>
